--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -92,6 +92,7 @@
     margin: 0 5% 25px 5%
     @include breakpoint($tablet)
       margin: 0
+      margin-bottom: 25px
     .gallery-description
       display: inline-block
       width: 170px
