Give shipping modal a bg

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -450,6 +450,7 @@ img + .page-galleries {
   display: none;
   padding: 35px;
   position: relative;
+  background-color: #fff;
 }
 .shipping-confirmation .close {
   width: 22px;
