Add instagram to footer

--- a/craft/templates/partials/footer.html
+++ b/craft/templates/partials/footer.html
@@ -5,7 +5,8 @@
     <li class="contact-address">{{ contactinformation.primaryAddress }}</li>
     <li class="contact-phone">{{ contactinformation.primaryPhone }}</li>
     <li class="contact-email"><a href="mailto:{{ contactinformation.primaryEmail }}">{{ contactinformation.primaryEmail }}</a></li>
-    <li class="facebook"><a href="https://www.facebook.com/PoggioLaNoce" target="_blank">Facebook</a></li>
+    <li class="facebook"><a href="{{ contactinformation.facebookUrl }}" target="_blank">Facebook</a></li>
+    <li class="instagram"><a href="{{ contactinformation.instagramUrl }}" target="_blank">Instagram</a></li>
   </ul>
   <p>© {{ now.year }} {{ siteName }}. All rights reserved.</p>
 </footer>
