Ensure that we show all page image options on contact

--- a/craft/templates/standard_page.html
+++ b/craft/templates/standard_page.html
@@ -5,28 +5,7 @@
 
   {% for entry in craft.entries.section('pages').slug(craft.request.getSegment(1)) %}
   <article class="page-content standard-page">
-    <div class="page-image">
-      {% set images = entry.pageImage %}
-      {% for image in images %}
-        <img src="{{ image.getUrl() }}" alt="">
-      {% endfor %}
-
-      {% set galleries = entry.photoGallery %}
-      {% if galleries | length > 0 %}
-        <div class="page-galleries">
-          {% for gallery in galleries %}
-            {% include 'partials/gallery_launcher.html' with {
-              'title': gallery.galleryTitle,
-              'description': gallery.galleryDescription,
-              'prefix': 'photo-gallery',
-              'imageTransform': 'galleryThumb',
-              'asset': gallery.galleryImages.first()
-            }%}
-            {% include 'partials/gallery.html' with { 'type': 'photo' } %}
-          {% endfor %}
-      </div>
-      {% endif %}
-    </div>
+    {% include 'partials/page_image' %}
     <div class="page-text">
       <h1>{{ entry.pageSubtitle }}</h1>
       <div class="page-text-container">
