--- a/craft/templates/contact.html
+++ b/craft/templates/contact.html
@@ -5,9 +5,7 @@
 
   {% for entry in craft.entries.section('pages').slug(craft.request.getSegment(1)) %}
   <article class="page-content standard-page">
-    <div class="page-image">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58129.93243744846!2d11.370236447956291!3d43.78779223369125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132baad566a47839%3A0x37a833dd8b34d006!2sPoggio+La+Noce!5e0!3m2!1sen!2sus!4v1478811195558" width="900" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>
-    </div>
+    {% include 'partials/page_image' %}
     <div class="page-text">
       <h1>{{ entry.pageSubtitle }}</h1>
       <div class="page-text-container">
