--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -263,16 +263,21 @@ footer
     margin-bottom: 50px
   p
     margin-bottom: 10px
+    font-size: 10px
+    @include breakpoint($phone)
+      font-size: 13px
   a
     color: $black
     text-decoration: none
     &:hover
       text-decoration: underline
   ul
-    margin-bottom: 40px
-    width: 320px
-    margin: 0 auto
-    margin-bottom: 20px
+    margin: 0 auto 20px
+    width: 245px
+    font-size: 10px
+    @include breakpoint($phone)
+      width: 320px
+      font-size: 13px
     @include breakpoint($tablet)
       font-size: 15px
       width: 570px
