--- a/craft/templates/commerce/checkout/shipping.html
+++ b/craft/templates/commerce/checkout/shipping.html
@@ -32,7 +32,7 @@
             <strong>{{ method.name }}</strong>
 
             <span class="price">
-              {{ method.amount|currency(cart.currency) }}
+              {{ method.amount|currency(currencyCode) }}
             </span>
           </label>
         </div>
