--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -728,9 +728,21 @@
       list-style-type: none
       display: flex
       flex-flow: row wrap
+      .award-blurb figure
+        max-width: 80%
+        margin: 15px auto
+        img
+          max-width: 100%
+        @include breakpoint($tablet)
+          margin: 0
+          margin-bottom: 5px
+          float: right
+          width: 35%
+          margin-left: 5%
+          max-width: inherit
       .right-image
         order: 1
-        flex-grow: 1
+        width: 100%
         text-align: center
         margin-bottom: 20px
         position: relative
@@ -744,38 +756,42 @@
           margin-left: 75px
           width: 270px
           text-align: center
-        img
-          width: 100px
-          margin: 0 auto
-          position: relative
-          z-index: 0
-          @include breakpoint($tablet)
-            width: 140px
-            margin: 0
-            float: right
-          @include breakpoint($desktop)
-            float: none
+        &.wine-image
+          img
+            width: 100px
             margin: 0 auto
-        &:before
-          @extend %wine-splat
-          left: -53px
-          width: 345px
-          height: 400px
-          background-size: 348px auto
-          right: -80px
-          display: none
-          z-index: -1
-        @include breakpoint($desktop)
+            position: relative
+            z-index: 0
+            @include breakpoint($tablet)
+              width: 140px
+              margin: 0
+              float: right
+            @include breakpoint($desktop)
+              float: none
+              margin: 0 auto
           &:before
-            display: block
+            @extend %wine-splat
+            left: -53px
+            width: 345px
+            height: 400px
+            background-size: 348px auto
+            right: -80px
+            display: none
+            z-index: -1
+          @include breakpoint($desktop)
+            &:before
+              display: block
 
       .left-content
         order: 2
+        width: 100%
         @include breakpoint($tablet)
           order: 1
           width: calc(100% - 180px)
         @include breakpoint($desktop)
           width: 660px
+        &.full-content
+          width: 100%
         ul
           padding: 0
       .badges
@@ -852,192 +868,11 @@
           p
             font-size: 18px
             margin-bottom: 20px
+            width: 100%
           h3
             font-size: 28px
             font-family: $sans
             width: 100%
-
-// News Page
-
-#news
-  .container
-    h1
-      font-size: 45px
-    .page-detail
-      .news-image
-        float: right
-        margin-left: 20px
-      .news-content
-        img
-          float: right
-          margin-left: 20px
-          margin-bottom: 20px
-    .page-content
-      .news-image
-        margin-bottom: 20px
-      .page-text
-        &:only-of-type, &:last-child
-          border-bottom: none
-        border-bottom: 1px solid $text-light-gray
-        padding-bottom: 30px
-        margin-bottom: 30px
-    .pagination
-      clear: left
-      width: 596px
-      a
-        display: block
-        padding: 6px 12px
-        margin-bottom: 0
-        text-align: center
-        cursor: pointer
-        background-image: none
-        border: 1px solid transparent
-        color: #fff
-        background: $orange
-        font-size: 16px
-        line-height: 40px
-        font-family: $serif
-        margin-top: 10px
-        width: 220px
-        font-style: italic
-        text-decoration: none
-        &:first-child
-          float: right
-        &:last-child
-          float: left
-      &:after
-        content: ""
-        clear: both
-        width: 100%
-        height: 1px
-        display: block
-    .news-search-form
-      form
-        position: relative
-        input[type=search]
-          width: 100%
-          border: none
-          height: 48px
-          line-height: 48px
-          -webkit-appearance: none
-          background-color: $text-light-gray
-          font-family: $sans
-          color: $text-gray
-          font-size: 24px
-          text-indent: 8px
-        input[type=submit]
-          position: absolute
-          right: 0
-          top: 0
-          width: 48px
-          height: 48px
-          border: none
-          background: #F48F1B url('/images/site/search.png') no-repeat center center
-          text-indent: -10000px
-
-    .news-search
-      width: 596px
-      min-height: 300px
-      .result-listing
-        margin: 0
-        padding: 0
-        li
-          border-bottom: 1px solid $text-light-gray
-          list-style: none
-          padding: 14px 0
-          margin: 0
-          &:last-child
-            border-bottom: none
-          img
-            float: left
-            margin-right: 25px
-        a
-          color: $text-black
-          text-decoration: none
-          span
-            color: $copper
-            display: block
-          span:last-child
-            color: $text-black
-      .no-results
-        font-size: 18px
-    #news-sidebar
-      float: right
-      padding-left: 75px
-      width: 334px
-      a
-        color: $copper
-      .news-sidebar-section
-        margin-bottom: 40px
-      h1
-        font-family: $sans
-        color: $text-gray
-        text-transform: uppercase
-        font-size: 32px
-        line-height: 52px
-        text-align: center
-      ul
-        padding: 0px
-        h4
-          font-size: 14px
-          margin-bottom: 5px
-          margin-top: -4px
-        li
-          border-bottom: 1px solid $text-light-gray
-          list-style: none
-          padding: 14px 0
-          margin-bottom: 0
-          float: left
-          a
-            font-family: $handwriting
-            text-decoration: none
-            color: $text-black
-            float: left
-            font-size: 20px
-            &:hover
-              color: $orange
-          img
-            float: left
-            margin-right: 10px
-      #mc_embed_signup
-        padding: 25px 30px
-        background-color: #F3F3F3
-        h2
-          text-align: center
-          font-size: 20px
-          margin: 0
-          padding: 0
-          margin-bottom: 25px
-        .mc-field-group
-          margin-bottom: 15px
-          label
-            display: block
-            margin-bottom: 5px
-          input
-            width: 100%
-            padding: 5px
-            font-size: 14px
-            box-sizing: border-box
-          .mce_inline_error
-            width: 100%
-            box-sizing: border-box
-        input[type="submit"]
-          -webkit-appearance: button
-          display: block
-          padding: 6px 12px
-          margin-bottom: 0
-          text-align: center
-          cursor: pointer
-          background-image: none
-          border: 1px solid transparent
-          color: #fff
-          background: $orange
-          font-size: 16px
-          line-height: 20px
-          font-family: $serif
-          width: 100%
-          margin-top: 25px
-          text-align: center
 
 // Contact Page
 
