--- a/craft/templates/partials/add_product.html
+++ b/craft/templates/partials/add_product.html
@@ -1,6 +1,7 @@
 <form method="POST">
   <input type="hidden" name="action" value="commerce/cart/updateCart">
   <input type="hidden" name="redirect" value="commerce/cart">
+  <input type="hidden" value="{{ currencyCode }}" name="paymentCurrency" >
 
   {{ getCsrfInput() }}
 
