--- a/craft/templates/partials/product_preview.html
+++ b/craft/templates/partials/product_preview.html
@@ -10,6 +10,7 @@
       <input type="hidden" name="action" value="commerce/cart/updateCart">
       <input type="hidden" name="redirect" value="commerce/cart">
       <input type="hidden" name="qty" value="1" min="1" max="10">
+      <input type="hidden" value="{{ currencyCode }}" name="paymentCurrency" >
       {{ getCsrfInput() }}
       {% for variant in item.variants %}
         {% if regionCode in variant.sku  %}
