--- a/craft/templates/partials/add_product.html
+++ b/craft/templates/partials/add_product.html
@@ -5,10 +5,45 @@
 
   {{ getCsrfInput() }}
 
+  <!-- Create twig array of correct variant products -->
+  {% set products = [] %}
   {% for variant in product.variants %}
     {% if regionCode in variant.sku  %}
-        <input type="hidden" value="{{ variant.purchasableId }}" name="purchasableId" />
-        <span class="price">{{ variant.price|commerceCurrency(currencyCode,convert=true,format=true) }}</span>
+      {% set products = products|merge([variant]) %}
+    {% endif %}
+  {% endfor  %}
+
+  {% if products|length > 1%}
+    <div class="vintage-select">
+      <p class="vintage-select-label">Choose vintage</p>
+      <select name="vintage-list">
+        {% for variant in products %}
+          {% set year = variant.sku|replace('/[^0-9+]/', '') %}
+          {% if year %}
+            <option value="{{ variant.sku }}">{{ year }}</option>
+          {% else %}
+            <option selected="selected" value="{{ variant.sku }}">Current Year</option>
+          {% endif %}
+        {% endfor  %}
+      </select>
+    </div>
+    {% includejs %}
+      var $forms = $('.variant-form');
+      var selectForm = function() {
+        $forms.filter('.current').removeClass('current');
+        $('[data-sku="' + $('[name="vintage-list"]').val() + '"]').addClass('current');
+      }
+
+      $('[name="vintage-list"]').on('change', selectForm)
+      selectForm();
+
+    {% endincludejs %}
+  {% endif %}
+
+  {% for variant in products %}
+    <div class="variant-form {% if products|length > 1%}hidden{% endif %}" data-sku="{{ variant.sku }}">
+      <input type="hidden" value="{{ variant.purchasableId }}" name="purchasableId" />
+      <span class="price">{{ variant.price|commerceCurrency(currencyCode,convert=true,format=true) }}</span>
       {% if variant.stock <= 0 and variant.unlimitedStock == false%}
         <input class="buy" type="submit" disabled="disabled" value="{{ "Out of Stock" | t }}" />
       {% else %}
@@ -18,7 +53,7 @@
         </div>
         <input class="buy" type="submit" value="{{ "Add to cart" | t }}" />
       {% endif %}
-    {% endif %}
+   </div>
   {% endfor  %}
 
 </form>
